# docs/swagger.json
@@ -1,8 +1,13 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "REST API service for aggregating user online subscription data.",
+        "title": "Subscription Service API",
+        "contact": {},
+        "version": "1.0"
     },
+    "host": "localhost:8080",
+    "basePath": "/",
     "paths": {
         "/subscriptions": {
             "get": {
@@ -27,10 +32,7 @@
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/models.ErrorResponse"
                         }
                     }
                 }
@@ -68,19 +70,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/models.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/models.ErrorResponse"
                         }
                     }
                 }
@@ -88,7 +84,7 @@
         },
         "/subscriptions/aggregate": {
             "get": {
-                "description": "Calculate total price of subscriptions with optional filters",
+                "description": "Calculate total price of subscriptions for a selected period with optional filtering by user ID and service name",
                 "produces": [
                     "application/json"
                 ],
@@ -99,7 +95,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "User ID to filter by",
+                        "description": "User ID (UUID) to filter by",
                         "name": "user_id",
                         "in": "query"
                     },
@@ -111,13 +107,13 @@
                     },
                     {
                         "type": "string",
-                        "description": "Start date (MM-YYYY) to filter by",
+                        "description": "Start date (MM-YYYY) of the period",
                         "name": "start_date",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "End date (MM-YYYY) to filter by",
+                        "description": "End date (MM-YYYY) of the period",
                         "name": "end_date",
                         "in": "query"
                     }
@@ -132,19 +128,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/models.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/models.ErrorResponse"
                         }
                     }
                 }
@@ -163,7 +153,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Subscription ID",
+                        "description": "Subscription ID (UUID)",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -176,28 +166,28 @@
                             "$ref": "#/definitions/models.SubscriptionResponse"
                         }
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/models.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/models.ErrorResponse"
                         }
                     }
                 }
             },
             "put": {
-                "description": "Update subscription details",
+                "description": "Update subscription details by ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -211,7 +201,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Subscription ID",
+                        "description": "Subscription ID (UUID)",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -236,28 +226,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/models.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/models.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/models.ErrorResponse"
                         }
                     }
                 }
@@ -271,7 +252,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Subscription ID",
+                        "description": "Subscription ID (UUID)",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -279,27 +260,24 @@
                 ],
                 "responses": {
                     "204": {
-                        "description": "No Content",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "description": "No Content"
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/models.ErrorResponse"
                         }
                     }
                 }
@@ -308,14 +286,27 @@
     },
     "definitions": {
         "models.AggregateResponse": {
+            "description": "Response body containing the total subscription cost",
             "type": "object",
             "properties": {
                 "total_price": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1200
+                }
+            }
+        },
+        "models.ErrorResponse": {
+            "description": "Error response",
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "error message"
                 }
             }
         },
         "models.SubscriptionRequest": {
+            "description": "Request body for creating or updating a subscription",
             "type": "object",
             "required": [
                 "price",
@@ -325,49 +316,61 @@
             ],
             "properties": {
                 "end_date": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "12-2025"
                 },
                 "price": {
                     "type": "integer",
-                    "minimum": 0
+                    "minimum": 1,
+                    "example": 400
                 },
                 "service_name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Yandex Plus"
                 },
                 "start_date": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "07-2025"
                 },
                 "user_id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "60601fee-2bf1-4721-ae6f-7636e79a0cba"
                 }
             }
         },
         "models.SubscriptionResponse": {
+            "description": "Response body containing subscription data",
             "type": "object",
             "properties": {
                 "created_at": {
                     "type": "string"
                 },
                 "end_date": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "12-2025"
                 },
                 "id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "550e8400-e29b-41d4-a716-446655440000"
                 },
                 "price": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 400
                 },
                 "service_name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Yandex Plus"
                 },
                 "start_date": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "07-2025"
                 },
                 "updated_at": {
                     "type": "string"
                 },
                 "user_id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "60601fee-2bf1-4721-ae6f-7636e79a0cba"
                 }
             }
         }
